--- a/Main/Source/XsdDocumentation/Properties/Resources.resx
+++ b/Main/Source/XsdDocumentation/Properties/Resources.resx
@@ -139,6 +139,9 @@
   <data name="OverviewTopic" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\overviewtopic.xml;System.String, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
+  <data name="SchemaSetNamespaceTopic" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\schemasetnamespacetopic.xml;System.String, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
   <data name="SchemaSetTopic" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\schemasettopic.xml;System.String, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
