--- a/Dev/ContentWriter/Source/XsdDocumentation/Properties/Resources.resx
+++ b/Dev/ContentWriter/Source/XsdDocumentation/Properties/Resources.resx
@@ -117,4 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ExceptionBuilderUnexpectedSchemaObjectType" xml:space="preserve">
+    <value>Unexpected schema object type '{0}'.</value>
+  </data>
+  <data name="ExceptionBuilderUnhandledCaseLabel" xml:space="preserve">
+    <value>Unhandled case label '{0}'</value>
+  </data>
 </root>
